--- a/src/components/NavLink/NavLink.module.scss
+++ b/src/components/NavLink/NavLink.module.scss
@@ -56,36 +56,50 @@
   .homeIcon {
     @include iconNav(url(../../assets/icons/nav/home.svg), var(--text-secondary));
   }
+
   .readsIcon {
     @include iconNav(url(../../assets/icons/nav/long.svg), var(--text-secondary));
   }
+
   .exploreIcon {
     @include iconNav(url(../../assets/icons/nav/explore.svg), var(--text-secondary));
   }
+
   .messagesIcon {
     @include iconNav(url(../../assets/icons/nav/messages.svg), var(--text-secondary));
   }
+
   .notificationsIcon {
     @include iconNav(url(../../assets/icons/nav/notifications.svg), var(--text-secondary));
   }
+
   .downloadIcon {
     @include iconNav(url(../../assets/icons/nav/downloads.svg), var(--text-secondary));
   }
+
   .premiumIcon {
     @include iconNav(url(../../assets/icons/nav/premium.svg), var(--text-secondary));
   }
+
   .walletIcon {
     @include iconNav(url(../../assets/icons/nav/wallet.svg), var(--text-primary));
   }
+
   .settingsIcon {
     @include iconNav(url(../../assets/icons/nav/settings.svg), var(--text-secondary));
   }
+
   .bookmarkIcon {
     @include iconNav(url(../../assets/icons/nav/bookmarks.svg), var(--text-secondary));
   }
 
+  .foundersIcon {
+    @include iconNav(url(../../assets/icons/nav/founders.svg), var(--text-secondary));
+  }
 
-  &:hover, a.active {
+
+  &:hover,
+  a.active {
     .label {
       color: var(--text-primary);
       background: none;
@@ -95,32 +109,45 @@
     .homeIcon {
       @include iconNav(url(../../assets/icons/nav/home_selected.svg), var(--text-primary));
     }
+
     .readsIcon {
       @include iconNav(url(../../assets/icons/nav/long_selected.svg), var(--text-primary));
     }
+
     .exploreIcon {
       @include iconNav(url(../../assets/icons/nav/explore.svg), var(--text-primary));
     }
+
     .messagesIcon {
       @include iconNav(url(../../assets/icons/nav/messages_selected.svg), var(--text-primary));
     }
+
     .notificationsIcon {
       @include iconNav(url(../../assets/icons/nav/notifications_selected.svg), var(--text-primary));
     }
+
     .downloadIcon {
       @include iconNav(url(../../assets/icons/nav/downloads_selected.svg), var(--text-primary));
     }
+
     .premiumIcon {
       @include iconNav(url(../../assets/icons/nav/premium.svg), var(--text-primary));
     }
+
     .walletIcon {
       @include iconNav(url(../../assets/icons/nav/wallet.svg), var(--text-primary));
     }
+
     .settingsIcon {
       @include iconNav(url(../../assets/icons/nav/settings_selected.svg), var(--text-primary));
     }
+
     .bookmarkIcon {
       @include iconNav(url(../../assets/icons/nav/bookmarks_selected.svg), var(--text-primary));
+    }
+
+    .foundersIcon {
+      @include iconNav(url(../../assets/icons/nav/founders_selected.svg), var(--text-primary));
     }
   }
 
@@ -179,6 +206,7 @@
     height: 8px;
     min-width: 8px;
     position: relative;
+
     >div {
       display: none;
     }
@@ -231,6 +259,7 @@
       }
     }
   }
+
   .hiddenOnSmallScreens {
     display: none
   }
